update pom.xml and scripts